--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,13 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    api (
-        'com.amazonaws:aws-lambda-java-core:1.2.1',
-        'com.amazonaws:aws-lambda-java-log4j:1.0.1',
-        'com.fasterxml.jackson.core:jackson-core:2.11.0',
-        'com.fasterxml.jackson.core:jackson-databind:2.11.0',
-        'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
+    api(
+            'com.amazonaws:aws-lambda-java-core:1.2.1',
+            'com.amazonaws:aws-lambda-java-log4j:1.0.1',
+            'com.amazonaws:aws-java-sdk-dynamodb:1.12.519',
+            'com.fasterxml.jackson.core:jackson-core:2.11.0',
+            'com.fasterxml.jackson.core:jackson-databind:2.11.0',
+            'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
     )
 }
 
