Add /rankings/{stage} Endpoint
Introduce /rankings/{stage} endpoint to retrieve stage-specific rankings for Tour de France 2019.

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
             'com.amazonaws:aws-lambda-java-core:1.2.1',
             'com.amazonaws:aws-lambda-java-log4j:1.0.1',
             'com.amazonaws:aws-lambda-java-events:3.11.2',
-            'com.amazonaws:aws-java-sdk-dynamodb:1.12.519',
+            'software.amazon.awssdk:dynamodb:2.20.118',
             'com.fasterxml.jackson.core:jackson-core:2.11.0',
             'com.fasterxml.jackson.core:jackson-databind:2.11.0',
             'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
