--- a/serverless.yml
+++ b/serverless.yml
@@ -56,7 +56,7 @@ functions:
       - http:
           path: /health
           method: get
-          integration: lambda
+#          integration: lambda
           authorizer:
             name: ${self:provider.environment.API_AUTHORIZER}
             type: COGNITO_USER_POOLS
@@ -69,7 +69,8 @@ functions:
       - http:
           path: /rankings
           method: get
-          integration: lambda
+          cors: true
+#          integration: lambda
           authorizer:
             name: ${self:provider.environment.API_AUTHORIZER}
             type: COGNITO_USER_POOLS
@@ -83,7 +84,12 @@ functions:
       - http:
           path: /rankings/{stage}
           method: get
-          integration: lambda
+          request:
+            parameters:
+              paths:
+                stage: true
+          cors: true
+#          integration: lambda
           authorizer:
             name: ${self:provider.environment.API_AUTHORIZER}
             type: COGNITO_USER_POOLS
